--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,4 +1,4 @@
 resources:
-  - deployment.yaml
-  - service.yaml
-  - route.yaml
+  - base/deployment.yaml
+  - base/service.yaml
+  - base/route.yaml
