--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -19,10 +19,20 @@ spec:
             - containerPort: 80
           env:
             - name: WORDPRESS_DB_HOST
-              value: mysql-service
+              value: mariadb
             - name: WORDPRESS_DB_USER
-              value: user
+              valueFrom:
+                secretKeyRef:
+                  name: mariadb-secret
+                  key: mariadb-user
             - name: WORDPRESS_DB_PASSWORD
-              value: password
+              valueFrom:
+                secretKeyRef:
+                name: mariadb-secret
+                key: mariadb-password
             - name: WORDPRESS_DB_NAME
-              value: wordpress
+              valueFrom:
+                secretKeyRef:
+                  name: mariadb-secret
+                  key: mariadb-database
+          
